--- a/tku/P3/myclass.html
+++ b/tku/P3/myclass.html
@@ -4,10 +4,73 @@
 <head>
     <meta charset="utf-8">
     <title>Myclass</title>
-    <link rel="stylesheet" href="myclass.css">
+    <link rel="stylesheet" type="text/css" href="myclass.css">
+
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="">
+
+
+
+    <!-- Bootstrap core CSS -->
+    <link href="../../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Custom fonts for this template -->
+    <link href="../../vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
+    <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
+
+    <!-- Custom styles for this template -->
+    <link href="../../css/agency.min.css" rel="stylesheet">
+
 </head>
 
 <body>
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
+        <div class="container">
+            <a class="navbar-brand js-scroll-trigger" href="../../index.html">403660029</a>
+            <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive"
+                aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+                Menu
+                <i class="fa fa-bars"></i>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav text-uppercase ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link js-scroll-trigger" href="#services">Introduction</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link js-scroll-trigger" href="#about">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link js-scroll-trigger" href="#team">Team</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
+                    </li>
+                </ul>
+                <div class="dropdown">
+                    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true"
+                        aria-expanded="false">
+                        TKU
+                    </button>
+                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                        <a class="dropdown-item" href="../../tku/P3/myclass.html">MyClass</a>
+                        <a class="dropdown-item" href="../../tku/第七次作業/tku60.html">tku60</a>
+                        <a class="dropdown-item" href="../../tku/第八次作業/bomber.html">Bomber</a>
+                        <a class="dropdown-item" href="../../tku/第五次作業/photoGrid.html">Photo</a>
+                        <a class="dropdown-item" href="../../tku/第四次作業/pokemon.html">Pokemon</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </nav>
     <table>
         <tr>
             <td rowspan="2" colspan="2" class="AA">黃嘉宥</td>
@@ -25,7 +88,8 @@
             <td class="B">8:10~9:00</td>
             <td class="C"></td>
             <td class="C"></td>
-            <td rowspan="2" class="C">日文(二)<br>SG314</td>
+            <td rowspan="2" class="C">日文(二)
+                <br>SG314</td>
             <td class="C"></td>
             <td class="C"></td>
         </tr>
@@ -43,7 +107,8 @@
             <td class="C"></td>
             <td class="C"></td>
             <td class="C"></td>
-            <td rowspan="2" class="C">全民國防<br>B115</td>
+            <td rowspan="2" class="C">全民國防
+                <br>B115</td>
             <td class="C"></td>
         </tr>
         <tr>
@@ -60,14 +125,16 @@
             <td class="C"></td>
             <td class="C"></td>
             <td class="C"></td>
-            <td rowspan="3" class="C">儲運管理<br>B117</td>
+            <td rowspan="3" class="C">儲運管理
+                <br>B117</td>
             <td class="C"></td>
         </tr>
         <tr>
             <td class="A">6</td>
             <td class="B">13:10~14:00</td>
             <td class="C"></td>
-            <td rowspan="2" class="C">網頁程式設計<br>B218</td>
+            <td rowspan="2" class="C">網頁程式設計
+                <br>B218</td>
             <td class="C"></td>
             <td class="C"></td>
         </tr>
@@ -91,7 +158,8 @@
             <td class="A">9</td>
             <td class="B">16:10~17:00</td>
             <td class="C"></td>
-            <td rowspan="2" class="C">大數據運輸行銷<br>B116</td>
+            <td rowspan="2" class="C">大數據運輸行銷
+                <br>B116</td>
             <td rowspan="2" class="C">體育課</td>
             <td class="C"></td>
             <td class="C"></td>
@@ -114,6 +182,19 @@
         </tr>
 
     </table>
+    <!-- Bootstrap core JavaScript -->
+    <script src="../../vendor/jquery/jquery.min.js"></script>
+    <script src="../../vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+
+    <!-- Plugin JavaScript -->
+    <script src="../../vendor/jquery-easing/jquery.easing.min.js"></script>
+
+    <!-- Contact form JavaScript -->
+    <script src="../../js/jqBootstrapValidation.js"></script>
+    <script src="../../js/contact_me.js"></script>
+
+    <!-- Custom scripts for this template -->
+    <script src="../../js/agency.min.js"></script>
 </body>
 
 </html>
